# decision-pack

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
app-api/: Cargo.toml
app-api/src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  simulation.rs
app-api/tests/: api_integration.rs
commerce-etl/: Cargo.toml
commerce-etl/src/: config.rs  csv_input.rs  lib.rs  main.rs  persistence.rs  sample.rs
customers-etl/: Cargo.toml
customers-etl/examples/: btree_experiment.rs  validateID.rs
customers-etl/src/: common.rs  config.rs  csv_input.rs  formatter.rs  lib.rs  main.rs  output.rs  persistence.rs  report.rs  sample.rs  schema.rs  summary.rs
customers-etl/src/columns/: address_line.rs  birth_date.rs  city.rs  country.rs  customer_id.rs  email.rs  full_name.rs  last_purchase_date.rs  marketing_opt_in.rs  mod.rs  notes.rs  order_count.rs  phone.rs  postal_code.rs  preferred_language.rs  region.rs  signup_date.rs  status.rs  tier.rs  total_spend.rs
db-migrate/: Cargo.toml
db-migrate/src/: main.rs
db/migrations/: 202604172120_initial_schema.sql
decision-engine/: Cargo.toml
decision-engine/schemas/: simulation_report_v0.1.schema.json
decision-engine/scripts/: validate_report_schema.py
decision-engine/src/: lib.rs  main.rs
decision-engine/tests/: golden_smoke.rs  report_schema_sync.rs
desktop-ui/: Cargo.toml
docs/: index.md
purchase-insights/: Cargo.toml
purchase-insights/src/: algorithm.rs  config.rs  db.rs  evaluation.rs  lib.rs  main.rs
reporting/: .gitignore
reporting/python/: Dockerfile  pyproject.toml
reporting/python/src/decision_report/: __init__.py  charts.py  cli.py  models.py
spec/: DecisionSpec.lean  lake-manifest.json  lakefile.toml
(+88 files in other folders)
