[package]
name = "customers-etl"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
